--- a/Html/main.html
+++ b/Html/main.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Your Bootstrap Page</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../Css/main.css">
+  </head>
+  <body>
+    <section>
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="javascript:void(0)">Home</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mynavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse d-sm-flex justify-content-between"
+            id="mynavbar"
+          >
+            <div class="">
+              <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)">Page</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)">Contact</a>
+                </li>
+              </ul>
+            </div>
+            <div class="">
+              <form class="d-flex">
+                <input
+                  class="form-control me-2"
+                  type="text"
+                  placeholder="Search"
+                />
+                <button class="btn btn-primary" type="button">Search</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </section>
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h1 class="main-head">The Animal Saviour</h1>
+          <p class="main-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+            quas adipisci nisi fugiat voluptates placeat tenetur distinctio
+            eveniet quae libero. Inventore suscipit rerum doloremque atque ab
+            cum reiciendis porro eum?
+          </p>
+          <button class="main-explore">Explore</button>
+          <h3 class="main-explore-sec">Are You Exploring!!</h3>
+        </div>
+        <div class="col-6">
+          <img src="../neom-CzwL_vn445k-unsplash.jpg" class="img-fluid h-75
+          w-100 alt="" />
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
